--- a/assets/html/four.html
+++ b/assets/html/four.html
@@ -1,3 +1,11 @@
 <div>
-    <p>Four</p>
+    <p class="white-text">
+        Time Travel Back to 2001: Making the Greatest Album Artwork In The World
+        <br />
+        Shot by Sean Murphy
+    </p>
+    <iframe src="https://player.vimeo.com/video/596672718" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>    
+    <div class="modal-social-shares">
+        <a href="https://twitter.com/intent/tweet?text=Day%209%20complete!%20You%20have%20once%20again%20proved%20you%20are%20a%20worthy%20member%20of%20the%20D-ciples.%20😈🔥🤘🏻&url=https://tenaciousd.com" target="_blank" rel="noopener noreferrer">Twitter</a><a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Ftenaciousd.com%2F&amp;src=sdkpreparse" target="_blank" rel="noopener noreferrer">Facebook</a>
+    </div>
 </div>
