--- a/ig.html
+++ b/ig.html
@@ -3,7 +3,7 @@
 <head>
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta charset="utf-8">
-    <meta name="twitter:title" content="TENACIOUS D - 25TH ANNIVERSARY CELEBRATION">
+    <meta name="twitter:title" content="TENACIOUS D - 20TH ANNIVERSARY CELEBRATION">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:description" content="Day 1 complete via https://tenaciousd.com. You have once again proved you are a worthy member of the D-ciples. 😈🔥🤘🏻">
     <meta name="twitter:image" content="https://tenaciousd.com/assets/images/D.jpeg">
@@ -11,7 +11,7 @@
 
     <meta property="og:url"                content="https://tenaciousd.com" />
     <meta property="og:type"               content="website" />
-    <meta property="og:title"              content="TENACIOUS D - 25TH ANNIVERSARY CELEBRATION" />
+    <meta property="og:title"              content="TENACIOUS D - 20TH ANNIVERSARY CELEBRATION" />
     <meta property="og:description"        content="Day 1 complete via https://tenaciousd.com. You have once again proved you are a worthy member of the D-ciples. 😈🔥🤘🏻" />
     <meta property="og:image"              content="./assets/images/D.jpeg" />
     <title>TENACIOUS D</title>
@@ -92,8 +92,7 @@
     </div>
 
     <div id="mobile-instructions">
-        <img src="./assets/images/phone_landscape.png" />
-        <p>Please open in Safari or Chrome and rotate your device for an optimal experience.</p>
+        <p>Please open in Safari or Chrome and rotate for an optimal experience.</p>
     </div>
 </div>
 <script
