--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta charset="utf-8">
-    <meta name="twitter:title" content="TENACIOUS D - 25TH ANNIVERSARY CELEBRATION">
+    <meta name="twitter:title" content="TENACIOUS D - 20TH ANNIVERSARY CELEBRATION">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:description" content="Day 1 complete via https://tenaciousd.com. You have once again proved you are a worthy member of the D-ciples. 😈🔥🤘🏻">
+    <meta name="twitter:description" content="Day 9 complete via https://tenaciousd.com. You have once again proved you are a worthy member of the D-ciples. 😈🔥🤘🏻">
     <meta name="twitter:image" content="https://tenaciousd.com/assets/images/D.jpeg">
     <meta name="twitter:domain" content="https://tenaciousd.com">
 
     <meta property="og:url"                content="https://tenaciousd.com" />
     <meta property="og:type"               content="website" />
-    <meta property="og:title"              content="TENACIOUS D - 25TH ANNIVERSARY CELEBRATION" />
-    <meta property="og:description"        content="Day 1 complete via https://tenaciousd.com. You have once again proved you are a worthy member of the D-ciples. 😈🔥🤘🏻" />
+    <meta property="og:title"              content="TENACIOUS D - 20TH ANNIVERSARY CELEBRATION" />
+    <meta property="og:description"        content="Day 9 complete via https://tenaciousd.com. You have once again proved you are a worthy member of the D-ciples. 😈🔥🤘🏻" />
     <meta property="og:image"              content="./assets/images/D.jpeg" />
     <title>TENACIOUS D</title>
 
@@ -28,30 +28,39 @@
 <body id="body">
     <div id='dsp'></div>
     <div class="background" id="background">
-        <img src="./assets/images/background_psd.png" />
+        <img class="desktop" id="desktop" src="./assets/images/background_psd.png" />
+        <img class="mobile" id="mobile" src="./assets/images/mobile_bg.png" />
     <div>
     <video autoplay playsinline muted loop id="myVideo" class="myVideo">
         <source src="./assets/images/video_compressed_a_lot.mp4" type="video/mp4">
     </video>
         <div id="site-link" class="site-link"><a href="https://www.site.tenaciousd.com" target="_blank" rel="noopener noreferrer">Proceed to site</a></div>
-        <div class="door-div one active current-day" id="door"></div>
-        <div class="door-div two" id="door"></div>
-        <div class="door-div three" id="door"></div>
-        <div class="door-div four" id="door"></div>
-        <div class="door-div five" id="door"></div>
-        <div class="door-div six" id="door"></div>
-        <div class="door-div seven" id="door"></div>
-        <div class="door-div eight" id="door"></div>
-        <div class="door-div nine" id="door"></div>
+        <div id="chat-link" class="chat-link" onClick="openChatModal();"><p>Open Chat</p></div>
+
+        <div class="door-div one active" id="door"></div>
+        <div class="door-div two active" id="door"></div>
+        <div class="door-div three active" id="door"></div>
+        <div class="door-div four active" id="door"></div>
+        <div class="door-div five active" id="door"></div>
+        <div class="door-div six active" id="door"></div>
+        <div class="door-div seven active" id="door"></div>
+        <div class="door-div eight active" id="door"></div>
+        <div class="door-div nine active current-day" id="door"></div>
     </div>
-
-
 
     <div class="modal" id="modal">
         <div class="modal-content">
             <div class="exit-modal" id="exit-modal" onclick="closeModal();">X</div>
           <div id="dynamicCopy" class="dynamicCopy"></div>
           <div id="dynamicPhoto" class="dynamicPhoto"></div>
+        </div>
+    </div>
+
+    <div class="chat-modal" id="chat-modal">
+        <div class="chat-modal-content">
+            <div class="exit-chat-modal" id="exit-chat-modal" onclick="closeChatModal();">X</div>
+            <iframe src='https://deadsimplechat.com/hPbFDvrKb' width='100%' height='500px' style="border: none;" ></iframe>
+
         </div>
     </div>
 
@@ -84,6 +93,14 @@
                         </svg>                               
                     </label>
                 </div>
+                <div>
+                    <label for="amazon">
+                        <input type="radio" id="amazon" name="dsp" value="amazon">
+                        <svg fill="#ffffff" width="24px" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="amazon" class="svg-inline--fa fa-amazon fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                            <path  d="M257.2 162.7c-48.7 1.8-169.5 15.5-169.5 117.5 0 109.5 138.3 114 183.5 43.2 6.5 10.2 35.4 37.5 45.3 46.8l56.8-56S341 288.9 341 261.4V114.3C341 89 316.5 32 228.7 32 140.7 32 94 87 94 136.3l73.5 6.8c16.3-49.5 54.2-49.5 54.2-49.5 40.7-.1 35.5 29.8 35.5 69.1zm0 86.8c0 80-84.2 68-84.2 17.2 0-47.2 50.5-56.7 84.2-57.8v40.6zm136 163.5c-7.7 10-70 67-174.5 67S34.2 408.5 9.7 379c-6.8-7.7 1-11.3 5.5-8.3C88.5 415.2 203 488.5 387.7 401c7.5-3.7 13.3 2 5.5 12zm39.8 2.2c-6.5 15.8-16 26.8-21.2 31-5.5 4.5-9.5 2.7-6.5-3.8s19.3-46.5 12.7-55c-6.5-8.3-37-4.3-48-3.2-10.8 1-13 2-14-.3-2.3-5.7 21.7-15.5 37.5-17.5 15.7-1.8 41-.8 46 5.7 3.7 5.1 0 27.1-6.5 43.1z"></path>
+                        </svg>                           
+                    </label>
+                </div>
             </div>
             <button class="email-signup-button" onclick="submitForm()">
                 Enter
@@ -92,8 +109,7 @@
     </div>
 
     <div id="mobile-instructions">
-        <img src="./assets/images/phone_landscape.png" />
-        <p>Please rotate your device for an optimal experience.</p>
+        <p>Please open in Safari or Chrome and rotate for an optimal experience.</p>
     </div>
 </div>
 <script
