day ten file test

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
         <div class="door-div six active" id="door"></div>
         <div class="door-div seven active" id="door"></div>
         <div class="door-div eight active" id="door"></div>
-        <div class="door-div nine active current-day" id="door"></div>
+        <div class="door-div nine active" id="door"></div>
+        <div class="door-div ten active current-day" id="door"></div>
     </div>
 
     <div class="modal" id="modal">
