--- a/assets/html/ten.html
+++ b/assets/html/ten.html
@@ -1,7 +1,7 @@
 <style>
     .day-ten-slider-image {
-        /* max-width: 640px; */
-        height: 500px;
+        max-width: 600px;
+        /* height: 500px; */
         padding-right: 50px;
         border: 1px solid #c62b1c;
         border-right: none;
@@ -13,7 +13,7 @@
       }
 
       .day-ten-slider {
-          height: 550px;
+          height: 640px;
           width: 80%;
           margin: 0 auto;
       }
