--- a/index.html
+++ b/index.html
@@ -122,4 +122,16 @@ crossorigin="anonymous">
 <script type="text/javascript" src="./assets/js/slick/slick.min.js"></script>
 </body>
 <script src="./assets/js/index.js" type="text/javascript"></script>
+<script>
+    $(document).ready(function(){
+        $('.day-ten-slider').slick({
+            infinite: true,
+            dots: true,
+            arrows: true,
+            slidesToShow: 3,
+            variableWidth: true,
+            centerMode: true
+        });
+    });
+</script>
 </html>
