--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@ crossorigin="anonymous">
 </script>
 <script src="./assets/js/jquery-ui.js"></script>
 <script type="text/javascript" src="./assets/js/slick/slick.min.js"></script>
-</body>
 <script src="./assets/js/index.js" type="text/javascript"></script>
 <script>
+    console.log("slick")
     $(document).ready(function(){
         $('.day-ten-slider').slick({
             infinite: true,
@@ -134,4 +134,5 @@ crossorigin="anonymous">
         });
     });
 </script>
+</body>
 </html>
