--- a/assets/html/ten.html
+++ b/assets/html/ten.html
@@ -93,5 +93,18 @@
     <div class="modal-social-shares">
         <a href="https://twitter.com/intent/tweet?text=Day%209%20complete!%20You%20have%20once%20again%20proved%20you%20are%20a%20worthy%20member%20of%20the%20D-ciples.%20😈🔥🤘🏻&url=https://tenaciousd.com" target="_blank" rel="noopener noreferrer">Twitter</a><a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Ftenaciousd.com%2F&amp;src=sdkpreparse" target="_blank" rel="noopener noreferrer">Facebook</a>
     </div>
+    <script>
+        console.log("slick 1")
+        $(document).ready(function(){
+            $('.day-ten-slider').slick({
+                infinite: true,
+                dots: true,
+                arrows: true,
+                slidesToShow: 3,
+                variableWidth: true,
+                centerMode: true
+            });
+        });
+    </script>
 </div>
 
