--- a/assets/html/ten.html
+++ b/assets/html/ten.html
@@ -13,8 +13,7 @@
       }
 
       .day-ten-slider {
-          height: 640px;
-          width: 80%;
+          width: 640px;
           margin: 0 auto;
       }
 
