day ten file test

--- a/assets/html/ten.html
+++ b/assets/html/ten.html
@@ -1,7 +1,7 @@
 <style>
     .day-ten-slider-image {
-        max-width: 600px;
-        /* height: 500px; */
+        /* max-width: 600px; */
+        height: 500px;
         padding-right: 25px;
         border-right: none;
     }
@@ -12,7 +12,8 @@
       }
 
       .day-ten-slider {
-          width: 440px;
+          width: 540px;
+          max-height: 550px;
           margin: 0 auto;
       }
 
