day ten file test

--- a/assets/html/ten.html
+++ b/assets/html/ten.html
@@ -19,6 +19,20 @@
       .slick-dots li button:before, .slick-dots li.slick-active button:before {
           color: white;
       }
+
+      @media screen and (max-width: 500px) {
+        .day-ten-slider {
+            width: 300px;
+            max-height: 300px;
+            margin: 0 auto;
+        }
+
+        .day-ten-slider-image {
+            height: 255px;
+            padding-right: 25px;
+            border-right: none;
+        }
+      }
 </style>
 
 <div>
