--- a/assets/html/ten.html
+++ b/assets/html/ten.html
@@ -42,7 +42,7 @@
         ...to YOUR fan stories!
     </p>
     <div class="day-ten-slider">
-        <div><img class="day-ten-slider-image" src="https://previews.dropbox.com/p/thumb/ABT0vbzrE0jsG5NEiCAuQIuZ7tYdIT_2IxEPYnUFJffsm0HDvRT5pEgSWuP-FHv_aQ4rYhO8ZFSPhaYk-96bZv7_-ojlYRIcQCCwOyRnmz0IdDCHfx4VmX-ZcMdJyBxiBL-sM2mEBm8U1pxOvjqY-UkaWcAiG9xG1LX8hHCS3EqM72LCz91Xb8sOamyBo9qWCeQ5_DdlXgxFW4tiZvjHnOxlPS20EEQ-zD1drWvLLpfbfOmvDWW7CTuc8CKRI_nSNzJsGcl4-mAJGxvA1sU8PnmBYnEvFYGYzPPIqUEbLYgTJPlCGGSnt957Mu1ahcz5QD9n9twJmKbFBqKpZlgTGm4EpDMfzxqEts3X9NtYXucIhg/p.jpeg?fv_content=true&size_mode=5" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/9nfkm85t5a633s2/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-1.jpg?raw=1" /></div>
         <div><img class="day-ten-slider-image" src="" /></div>
         <div><img class="day-ten-slider-image" src="" /></div>
         <div><img class="day-ten-slider-image" src="" /></div>
