--- a/assets/html/ten.html
+++ b/assets/html/ten.html
@@ -43,16 +43,30 @@
     </p>
     <div class="day-ten-slider">
         <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/9nfkm85t5a633s2/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-1.jpg?raw=1" /></div>
-        <div><img class="day-ten-slider-image" src="" /></div>
-        <div><img class="day-ten-slider-image" src="" /></div>
-        <div><img class="day-ten-slider-image" src="" /></div>
-        <div><img class="day-ten-slider-image" src="" /></div>
-        <div><img class="day-ten-slider-image" src="" /></div>
-        <div><img class="day-ten-slider-image" src="" /></div>
-        <div><img class="day-ten-slider-image" src="" /></div>
-        <div><img class="day-ten-slider-image" src="" /></div>
-        <div><img class="day-ten-slider-image" src="" /></div>
-        <div><img class="day-ten-slider-image" src="" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/iyo6u9wyfxgijjp/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-2.jpg?raw=1" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/2cq9hqrdvqy367g/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-3.jpg?dl=0" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/akyz5m13f6fix4x/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-5.jpg?dl=0" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/avdtvv6ja6m7q0n/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-21.jpg?dl=0" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/sn6zol9ywd14fiv/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-22.jpg?dl=0" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/eshebtv1uey8s2d/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-23.jpg?dl=0" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/9x6cnubw52wira7/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-25.jpg?dl=0" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/8w1cj42tvsj9av1/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-26.jpg?dl=0" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/ux3zelfjlhy7m8w/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-27.jpg?dl=0" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/thqk6qnt0wcwzap/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-28.jpg?dl=0" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/qgkd55zzyj0qcxq/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-33.jpg?dl=0" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/ti8y5v1yphtiz04/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-35.jpg?dl=0" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/b5kg3gviishvtij/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-36.jpg?dl=0" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/ti0wy8bgf685lh8/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-39.jpg?dl=0" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/lrynlyl8x2qsot7/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-42.jpg?dl=0" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/n9jnk97f98cyxza/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-45.jpg?dl=0" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/bfu8qsd4sd12r4y/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-47.jpg?dl=0" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/tzwa6s0k9gnmmag/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-49.jpg?dl=0" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/9hxiafp84rbl6ph/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-50.jpg?dl=0" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/o9y6c35kld1ls8z/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-51.jpg?dl=0" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/tepcjfckixwur0m/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-1.jpg?dl=0" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/uhrkuhxdb6bio40/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-2.jpg?dl=0" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/hvitm47po5m01cc/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-3.jpg?dl=0" /></div>
+        
 
     
     </div>
