--- a/assets/html/ten.html
+++ b/assets/html/ten.html
@@ -66,40 +66,40 @@
         <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/tepcjfckixwur0m/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-1.jpg?raw=1" /></div>
         <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/uhrkuhxdb6bio40/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-2.jpg?raw=1" /></div>
         <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/hvitm47po5m01cc/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-3.jpg?raw=1" /></div>
-        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/5asyj60wg09t99u/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-4.jpg?dl=0" /></div>
-        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/xpi6tq0a5pjqpd1/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-5.jpg?dl=0" /></div>
-        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/ifs4e2t363k1605/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-6.jpg?dl=0" /></div>
-        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/dmotemsdbvp0twn/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-7.jpg?dl=0" /></div>
-        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/gu0cch0d39qmprx/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-8.jpg?dl=0" /></div>
-        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/zpcfauj2lnx2fbz/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-9.jpg?dl=0" /></div>
-        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/htw515zxj8t0u5v/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-12.jpg?dl=0" /></div>
-        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/054f1zy06f6gsbv/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-13.jpg?dl=0" /></div>
-        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/ffmvbj4kr3wxqvk/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-14.jpg?dl=0" /></div>
-        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/o3u6d40oxwag2cz/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-19.jpg?dl=0" /></div>
-        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/mzsft5w0f8iq0hl/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-23.jpg?dl=0" /></div>
-        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/j5a2cyitwqucdt3/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-24.jpg?dl=0" /></div>
-        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/sggqyk4nl7flkbr/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-25.jpg?dl=0" /></div>
-        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/9mvq4rkzos7n57i/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-26.jpg?dl=0" /></div>
-        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/o3iernlzu8ir763/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-27.jpg?dl=0" /></div>
-        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/k6c8q7jjhfi8ay6/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-28.jpg?dl=0" /></div>
-        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/qa6fejtzdkdvqkg/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-29.jpg?dl=0" /></div>
-        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/iyeoevsbp9ei8zm/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-30.jpg?dl=0" /></div>
-        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/3smaxjfap54tkd0/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-31.jpg?dl=0" /></div>
-        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/bc3aoday27qhmlg/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-37.jpg?dl=0" /></div>
-        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/l64dtrqklt8t15w/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-38.jpg?dl=0" /></div>
-        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/xrqmq5tdbbin7y1/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-40.jpg?dl=0" /></div>
-        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/padlfv8lgqgn3q0/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-46.jpg?dl=0" /></div>
-        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/tt5n6flf884cq3p/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-47.jpg?dl=0" /></div>
-        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/gd5nwgj1xffin97/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-48.jpg?dl=0" /></div>
-        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/dxd09xswcoeputw/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-49.jpg?dl=0" /></div>
-        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/ewbzo6ylky0eedx/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-50.jpg?dl=0" /></div>
-        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/4oouq31jddxs6s4/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-51.jpg?dl=0" /></div>
-        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/oxect1plmxtdqt7/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-52.jpg?dl=0" /></div>
-        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/niuql698p1dktrs/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-53.jpg?dl=0" /></div>
-        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/ajkfoorpyeg5h1f/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-55.jpg?dl=0" /></div>
-        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/w6ofs7gtmtvudn6/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-56.jpg?dl=0" /></div>
-        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/10a6vv6iy5u19l7/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-58.jpg?dl=0" /></div>
-        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/maqk06jeh60zi6f/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-59.jpg?dl=0" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/5asyj60wg09t99u/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-4.jpg?raw=1" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/xpi6tq0a5pjqpd1/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-5.jpg?raw=1" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/ifs4e2t363k1605/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-6.jpg?raw=1" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/dmotemsdbvp0twn/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-7.jpg?raw=1" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/gu0cch0d39qmprx/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-8.jpg?raw=1" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/zpcfauj2lnx2fbz/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-9.jpg?raw=1" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/htw515zxj8t0u5v/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-12.jpg?raw=1" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/054f1zy06f6gsbv/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-13.jpg?raw=1" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/ffmvbj4kr3wxqvk/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-14.jpg?raw=1" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/o3u6d40oxwag2cz/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-19.jpg?raw=1" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/mzsft5w0f8iq0hl/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-23.jpg?raw=1" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/j5a2cyitwqucdt3/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-24.jpg?raw=1" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/sggqyk4nl7flkbr/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-25.jpg?raw=1" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/9mvq4rkzos7n57i/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-26.jpg?raw=1" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/o3iernlzu8ir763/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-27.jpg?raw=1" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/k6c8q7jjhfi8ay6/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-28.jpg?raw=1" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/qa6fejtzdkdvqkg/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-29.jpg?raw=1" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/iyeoevsbp9ei8zm/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-30.jpg?raw=1" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/3smaxjfap54tkd0/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-31.jpg?raw=1" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/bc3aoday27qhmlg/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-37.jpg?raw=1" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/l64dtrqklt8t15w/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-38.jpg?raw=1" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/xrqmq5tdbbin7y1/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-40.jpg?raw=1" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/padlfv8lgqgn3q0/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-46.jpg?raw=1" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/tt5n6flf884cq3p/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-47.jpg?raw=1" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/gd5nwgj1xffin97/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-48.jpg?raw=1" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/dxd09xswcoeputw/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-49.jpg?raw=1" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/ewbzo6ylky0eedx/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-50.jpg?raw=1" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/4oouq31jddxs6s4/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-51.jpg?raw=1" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/oxect1plmxtdqt7/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-52.jpg?raw=1" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/niuql698p1dktrs/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-53.jpg?raw=1" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/ajkfoorpyeg5h1f/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-55.jpg?raw=1" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/w6ofs7gtmtvudn6/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-56.jpg?raw=1" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/10a6vv6iy5u19l7/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-58.jpg?raw=1" /></div>
+        <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/maqk06jeh60zi6f/tenacious-d-packaging-jack-black-kyle-gass-seanmurphyphoto-music-rock-59.jpg?raw=1" /></div>
         
 
     
