--- a/assets/html/ten.html
+++ b/assets/html/ten.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.css" integrity="sha512-6lLUdeQ5uheMFbWm3CP271l14RsX1xtx+J5x2yeIDkkiBpeVTNhTqijME7GgRKKi6hCqovwCoBTlRBEC20M8Mg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css" integrity="sha512-wR4oNhLBHf7smjy0K4oqzdWumd+r5/+6QO/vDda76MW5iug4PT7v86FoEkySIJft3XA0Ae6axhIvHrqwm793Nw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <style>
     .day-ten-slider-image {
         height: 500px;
@@ -107,6 +109,8 @@
     <div class="modal-social-shares">
         <a href="https://twitter.com/intent/tweet?text=Day%2010%20complete!%20You%20have%20once%20again%20proved%20you%20are%20a%20worthy%20member%20of%20the%20D-ciples.%20😈🔥🤘🏻&url=https://tenaciousd.com" target="_blank" rel="noopener noreferrer">Twitter</a><a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Ftenaciousd.com%2F&amp;src=sdkpreparse" target="_blank" rel="noopener noreferrer">Facebook</a>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js" integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script>
         console.log("slick 1")
         $(document).ready(function(){
@@ -115,7 +119,8 @@
                 arrows: true,
                 slidesToShow: 1,
                 variableWidth: true,
-                centerMode: true
+                centerMode: true,
+                lazyLoad: 'ondemand'
             });
         });
     </script>
