--- a/assets/html/ten.html
+++ b/assets/html/ten.html
@@ -12,8 +12,12 @@
         color: white;
       }
 
+      .slick-slide {
+          width: 450px;
+      }
+
       .day-ten-slider {
-          width: 540px;
+          width: 450px;
           max-height: 550px;
           margin: 0 auto;
       }
@@ -44,17 +48,17 @@
         ...to YOUR fan stories!
     </p>
     <div class="day-ten-slider">
-        <div><img class="day-ten-slider-image" data-lazy="https://www.dropbox.com/s/9nfkm85t5a633s2/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-1.jpg?raw=1" /></div>
-        <div><img class="day-ten-slider-image" data-lazy="https://www.dropbox.com/s/iyo6u9wyfxgijjp/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-2.jpg?raw=1" /></div>
-        <div><img class="day-ten-slider-image" data-lazy="https://www.dropbox.com/s/2cq9hqrdvqy367g/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-3.jpg?raw=1" /></div>
-        <div><img class="day-ten-slider-image" data-lazy="https://www.dropbox.com/s/akyz5m13f6fix4x/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-5.jpg?raw=1" /></div>
-        <div><img class="day-ten-slider-image" data-lazy="https://www.dropbox.com/s/avdtvv6ja6m7q0n/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-21.jpg?raw=1" /></div>
-        <div><img class="day-ten-slider-image" data-lazy="https://www.dropbox.com/s/sn6zol9ywd14fiv/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-22.jpg?raw=1" /></div>
-        <div><img class="day-ten-slider-image" data-lazy="https://www.dropbox.com/s/eshebtv1uey8s2d/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-23.jpg?raw=1" /></div>
-        <div><img class="day-ten-slider-image" data-lazy="https://www.dropbox.com/s/9x6cnubw52wira7/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-25.jpg?raw=1" /></div>
-        <div><img class="day-ten-slider-image" data-lazy="https://www.dropbox.com/s/8w1cj42tvsj9av1/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-26.jpg?raw=1" /></div>
-        <div><img class="day-ten-slider-image" data-lazy="https://www.dropbox.com/s/ux3zelfjlhy7m8w/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-27.jpg?raw=1" /></div>
-        <div><img class="day-ten-slider-image" data-lazy="https://www.dropbox.com/s/thqk6qnt0wcwzap/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-28.jpg?raw=1" /></div>
+        <div><img class="day-ten-slider-image" border=0 style="border: 0;" data-lazy="https://www.dropbox.com/s/9nfkm85t5a633s2/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-1.jpg?raw=1" alt="slider-image"  /></div>
+        <div><img class="day-ten-slider-image" style="border: 0;" data-lazy="https://www.dropbox.com/s/iyo6u9wyfxgijjp/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-2.jpg?raw=1" alt="slider-image" /></div>
+        <div><img class="day-ten-slider-image" style="border: 0;" data-lazy="https://www.dropbox.com/s/2cq9hqrdvqy367g/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-3.jpg?raw=1" alt="slider-image" /></div>
+        <div><img class="day-ten-slider-image" style="border: 0;" data-lazy="https://www.dropbox.com/s/akyz5m13f6fix4x/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-5.jpg?raw=1" alt="slider-image" /></div>
+        <div><img class="day-ten-slider-image" style="border: 0;" data-lazy="https://www.dropbox.com/s/avdtvv6ja6m7q0n/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-21.jpg?raw=1" /></div>
+        <div><img class="day-ten-slider-image" style="border: 0;" data-lazy="https://www.dropbox.com/s/sn6zol9ywd14fiv/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-22.jpg?raw=1" /></div>
+        <div><img class="day-ten-slider-image" style="border: 0;" data-lazy="https://www.dropbox.com/s/eshebtv1uey8s2d/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-23.jpg?raw=1" /></div>
+        <div><img class="day-ten-slider-image" style="border: 0;" data-lazy="https://www.dropbox.com/s/9x6cnubw52wira7/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-25.jpg?raw=1" /></div>
+        <div><img class="day-ten-slider-image" style="border: 0;" data-lazy="https://www.dropbox.com/s/8w1cj42tvsj9av1/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-26.jpg?raw=1" /></div>
+        <div><img class="day-ten-slider-image" style="border: 0;" data-lazy="https://www.dropbox.com/s/ux3zelfjlhy7m8w/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-27.jpg?raw=1" /></div>
+        <div><img class="day-ten-slider-image" style="border: 0;" data-lazy="https://www.dropbox.com/s/thqk6qnt0wcwzap/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-28.jpg?raw=1" /></div>
         <div><img class="day-ten-slider-image" data-lazy="https://www.dropbox.com/s/qgkd55zzyj0qcxq/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-33.jpg?raw=1" /></div>
         <div><img class="day-ten-slider-image" data-lazy="https://www.dropbox.com/s/ti8y5v1yphtiz04/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-35.jpg?raw=1" /></div>
         <div><img class="day-ten-slider-image" data-lazy="https://www.dropbox.com/s/b5kg3gviishvtij/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-36.jpg?raw=1" /></div>
