--- a/assets/html/ten.html
+++ b/assets/html/ten.html
@@ -121,7 +121,8 @@
                 slidesToShow: 1,
                 variableWidth: true,
                 centerMode: true,
-                initialSlide: 0
+                initialSlide: 0,
+                lazyLoad: 'onDemand'
             });
         });
     </script>
