--- a/assets/html/ten.html
+++ b/assets/html/ten.html
@@ -17,8 +17,8 @@
       }
 
       .slick-track {
-          display: flex !important;
-          align-items: center !important;
+          /* display: flex !important; */
+          /* align-items: center !important; */
       }
 
       .slick-dots li button:before, .slick-dots li.slick-active button:before {
