--- a/assets/html/ten.html
+++ b/assets/html/ten.html
@@ -19,7 +19,7 @@
       .slick-track {
           /* display: flex !important; */
           /* align-items: center !important; */
-          transform: translate3d(0px, 0px, 0px)
+          transform: translate3d(0px, 0px, 0px) !important;
       }
 
       .slick-dots li button:before, .slick-dots li.slick-active button:before {
