--- a/assets/html/ten.html
+++ b/assets/html/ten.html
@@ -1,6 +1,8 @@
 <style>
     .day-ten-slider-image {
-        height: 500px;
+        /* height: 500px; */
+        width: 100%;
+        height: auto;
         padding-right: 25px;
         border-right: none;
     }
@@ -28,12 +30,12 @@
       @media screen and (max-width: 768px) {
         .day-ten-slider {
             width: 300px;
-            max-height: 300px;
+            max-height: 400px;
             margin: 0 auto;
         }
 
         .day-ten-slider-image {
-            height: auto;
+            height: auto !important;
             width: 225px !important;
             padding-right: 25px;
             border-right: none;
