--- a/assets/html/ten.html
+++ b/assets/html/ten.html
@@ -14,13 +14,13 @@
 
       .day-ten-slider {
           width: 540px;
-          max-height: 550px;
+          max-height: 560px;
           margin: 0 auto;
       }
 
       .slick-track {
-          /* display: flex !important; */
-          /* align-items: center !important; */
+          display: flex !important;
+          align-items: center !important;
       }
 
       .slick-dots li button:before, .slick-dots li.slick-active button:before {
