--- a/assets/html/ten.html
+++ b/assets/html/ten.html
@@ -14,7 +14,7 @@
 
       .day-ten-slider {
           width: 540px;
-          max-height: 560px;
+          min-height: 560px;
           margin: 0 auto;
       }
 
