--- a/assets/html/ten.html
+++ b/assets/html/ten.html
@@ -45,9 +45,9 @@
 
 <div>
     <p class="white-text">
-        <span style="font-style: italic;">Tenacious D Reacts</span>
+        Time Travel Back to 2001: Film from The D's Album Artwork Photo Shoot and Promo Shoots
         <br />
-        ...to YOUR fan stories!
+        Shots by Sean Murphy
     </p>
     <div class="day-ten-slider">
         <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/kwf79902d629zym/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-1.jpg?raw=1" /></div>
