--- a/assets/html/ten.html
+++ b/assets/html/ten.html
@@ -117,7 +117,7 @@
     <script>
         console.log("slick 1")
         $(document).ready(function(){
-            $('.day-ten-slider').slick({
+            $('.day-ten-slider').slickLightbox({
                 infinite: true,
                 arrows: true,
                 slidesToShow: 1,
