--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="./assets/css/styles.css" />
     <link rel="stylesheet" type="text/css" href="./assets/css/slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="./assets/css/slick/slick-theme.css"/>
+    <link rel="stylesheet" type="text/css" href="styles/slick-lightbox.css">
 </head>
 <body id="body">
     <div id='dsp'></div>
@@ -111,6 +112,7 @@ crossorigin="anonymous">
 </script>
 <script src="./assets/js/jquery-ui.js"></script>
 <script type="text/javascript" src="./assets/js/slick/slick.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-lightbox/0.2.12/slick-lightbox.min.js" integrity="sha512-iSVaq9Huv1kxBDAOH7Il1rwIJD+uspMQC1r4Y73QquhbI2ia+PIXUoS5rBjWjYyD03S8t7gZmON+Dk6yPlWHXw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="./assets/js/index.js" type="text/javascript"></script>
 </body>
 </html>
