--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
     <link rel="stylesheet" href="./assets/css/styles.css" />
     <link rel="stylesheet" type="text/css" href="./assets/css/slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="./assets/css/slick/slick-theme.css"/>
-    <link rel="stylesheet" type="text/css" href="styles/slick-lightbox.css">
-</head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-lightbox/0.2.12/slick-lightbox.css" integrity="sha512-GPEZI1E6wle+Inl8CkTU3Ncgc9WefoWH4Jp8urbxZNbaISy0AhzIMXVzdK2GEf1+OVhA+MlcwPuNve3rL1F9yg==" crossorigin="anonymous" referrerpolicy="no-referrer" /></head>
 <body id="body">
     <div id='dsp'></div>
     <div class="background" id="background">
