--- a/assets/html/ten.html
+++ b/assets/html/ten.html
@@ -118,6 +118,7 @@
         console.log("slick 1")
         $(document).ready(function(){
             $('.day-ten-slider').slickLightbox({
+                itemSelector: 'img',
                 infinite: true,
                 arrows: true,
                 slidesToShow: 1,
