--- a/assets/html/ten.html
+++ b/assets/html/ten.html
@@ -49,9 +49,9 @@
         <br />
         Shots by Sean Murphy
     </p>
-    <div class="day-ten-slider">
-        <div><a href="https://www.dropbox.com/s/kwf79902d629zym/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-1.jpg?raw=1"><img class="day-ten-slider-image" src="https://www.dropbox.com/s/kwf79902d629zym/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-1.jpg?raw=1" /></a></div>
-        <div><a href="https://www.dropbox.com/s/q3pibfgaiv76bjd/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-2.jpg?raw=1"><img class="day-ten-slider-image" src="https://www.dropbox.com/s/q3pibfgaiv76bjd/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-2.jpg?raw=1" /></a></div>
+    <ul class="day-ten-slider">
+        <li><a href="https://www.dropbox.com/s/kwf79902d629zym/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-1.jpg?raw=1"><img class="day-ten-slider-image" src="https://www.dropbox.com/s/kwf79902d629zym/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-1.jpg?raw=1" /></a></li>
+        <li><a href="https://www.dropbox.com/s/q3pibfgaiv76bjd/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-2.jpg?raw=1"><img class="day-ten-slider-image" src="https://www.dropbox.com/s/q3pibfgaiv76bjd/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-2.jpg?raw=1" /></a></li>
         <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/lmg1d6qoqnvl7sg/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-3.jpg?raw=1" /></div>
         <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/ikaahevdnpm29xz/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-5.jpg?raw=1" /></div>
         <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/p5ezttp9hvglkyx/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-21.jpg?raw=1" /></div>
@@ -110,7 +110,7 @@
         
 
     
-    </div>
+    </ul>
     <div class="modal-social-shares">
         <a href="https://twitter.com/intent/tweet?text=Day%2010%20complete!%20You%20have%20once%20again%20proved%20you%20are%20a%20worthy%20member%20of%20the%20D-ciples.%20😈🔥🤘🏻&url=https://tenaciousd.com" target="_blank" rel="noopener noreferrer">Twitter</a><a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Ftenaciousd.com%2F&amp;src=sdkpreparse" target="_blank" rel="noopener noreferrer">Facebook</a>
     </div>
