--- a/assets/html/ten.html
+++ b/assets/html/ten.html
@@ -119,13 +119,15 @@
         $(document).ready(function(){
             $('.day-ten-slider').slickLightbox({
                 itemSelector: '> li > a',
-                infinite: true,
-                arrows: true,
-                slidesToShow: 1,
-                // variableWidth: true,
-                centerMode: true,
-                initialSlide: 0,
-                lazyLoad: 'onDemand'
+                slick: {
+                    infinite: true,
+                    arrows: true,
+                    slidesToShow: 1,
+                    // variableWidth: true,
+                    centerMode: true,
+                    initialSlide: 0,
+                    lazyLoad: 'onDemand'
+                }
             });
         });
     </script>
