--- a/assets/html/ten.html
+++ b/assets/html/ten.html
@@ -50,8 +50,8 @@
         Shots by Sean Murphy
     </p>
     <div class="day-ten-slider">
-        <div><a href="https://www.dropbox.com/s/kwf79902d629zym/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-1.jpg?raw=1"><img class="day-ten-slider-image" src="https://www.dropbox.com/s/kwf79902d629zym/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-1.jpg?raw=1" /></a></div>
-        <div><a href="https://www.dropbox.com/s/q3pibfgaiv76bjd/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-2.jpg?raw=1"><img class="day-ten-slider-image" src="https://www.dropbox.com/s/q3pibfgaiv76bjd/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-2.jpg?raw=1" /></a></div>
+        <div class="single"><a href="https://www.dropbox.com/s/kwf79902d629zym/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-1.jpg?raw=1"><img class="day-ten-slider-image" src="https://www.dropbox.com/s/kwf79902d629zym/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-1.jpg?raw=1" /></a></div>
+        <div class="single"><a href="https://www.dropbox.com/s/q3pibfgaiv76bjd/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-2.jpg?raw=1"><img class="day-ten-slider-image" src="https://www.dropbox.com/s/q3pibfgaiv76bjd/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-2.jpg?raw=1" /></a></div>
     </div>
         <!-- <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/lmg1d6qoqnvl7sg/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-3.jpg?raw=1" /></div>
         <div><img class="day-ten-slider-image" src="https://www.dropbox.com/s/ikaahevdnpm29xz/tenacious-d-devil-cover-jack-black-kyle-gass-seanmurphyphoto-music-rock-5.jpg?raw=1" /></div>
