--- a/assets/html/ten.html
+++ b/assets/html/ten.html
@@ -128,7 +128,7 @@
                 lazyLoad: 'onDemand'
             })
             $('.day-ten-slider').slickLightbox({
-                itemSelector: '> li > a',
+                itemSelector: 'a',
             });
         });
     </script>
