--- a/assets/html/ten.html
+++ b/assets/html/ten.html
@@ -27,6 +27,21 @@
           color: white;
       }
 
+      @media screen and (min-width: 501px) and (max-width: 768px) {
+        .day-ten-slider {
+            width: 300px;
+            max-height: 310px;
+            margin: 0 auto;
+        }
+
+        .day-ten-slider-image {
+            height: auto !important;
+            width: 225px !important;
+            padding-right: 25px;
+            border-right: none;
+        }
+      }
+
       @media screen and (max-width: 768px) {
         .day-ten-slider {
             width: 300px;
