--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="utf-8">
     <meta name="twitter:title" content="TENACIOUS D - 20TH ANNIVERSARY CELEBRATION">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:description" content="Day 10 complete via https://tenaciousd.com. You have once again proved you are a worthy member of the D-ciples. 😈🔥🤘🏻">
+    <meta name="twitter:description" content="Day 14 complete via https://tenaciousd.com. You have once again proved you are a worthy member of the D-ciples. 😈🔥🤘🏻">
     <meta name="twitter:image" content="https://tenaciousd.com/assets/images/D.jpeg">
     <meta name="twitter:domain" content="https://tenaciousd.com">
 
     <meta property="og:url"                content="https://tenaciousd.com" />
     <meta property="og:type"               content="website" />
     <meta property="og:title"              content="TENACIOUS D - 20TH ANNIVERSARY CELEBRATION" />
-    <meta property="og:description"        content="Day 10 complete via https://tenaciousd.com. You have once again proved you are a worthy member of the D-ciples. 😈🔥🤘🏻" />
+    <meta property="og:description"        content="Day 14 complete via https://tenaciousd.com. You have once again proved you are a worthy member of the D-ciples. 😈🔥🤘🏻" />
     <meta property="og:image"              content="./assets/images/D.jpeg" />
     <title>TENACIOUS D</title>
 
@@ -25,6 +25,8 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="./assets/css/slick/slick-theme.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-lightbox/0.2.12/slick-lightbox.css" integrity="sha512-GPEZI1E6wle+Inl8CkTU3Ncgc9WefoWH4Jp8urbxZNbaISy0AhzIMXVzdK2GEf1+OVhA+MlcwPuNve3rL1F9yg==" crossorigin="anonymous" referrerpolicy="no-referrer" /></head>
+
+</head>
 <body id="body">
     <div id='dsp'></div>
     <div class="background" id="background">
@@ -35,6 +37,7 @@
         <source src="./assets/images/video_compressed_a_lot.mp4" type="video/mp4">
     </video>
         <div id="site-link" class="site-link"><a href="https://www.site.tenaciousd.com" target="_blank" rel="noopener noreferrer">Proceed to site</a></div>
+   
 
         <div class="door-div one active" id="door"></div>
         <div class="door-div two active" id="door"></div>
@@ -45,7 +48,10 @@
         <div class="door-div seven active" id="door"></div>
         <div class="door-div eight active" id="door"></div>
         <div class="door-div nine active" id="door"></div>
-        <div class="door-div ten active current-day" id="door"></div>
+        <div class="door-div ten active" id="door"></div>
+        <div class="door-div twelve active" id="door"></div>
+        <div class="door-div thirteen active" id="door"></div>
+        <div class="door-div fourteen active current-day" id="door"></div>
     </div>
 
     <div class="modal" id="modal">
@@ -55,6 +61,8 @@
           <div id="dynamicPhoto" class="dynamicPhoto"></div>
         </div>
     </div>
+
+    
 
     <div id='landing-modal'>
         <div class="landing-modal-content">
@@ -112,6 +120,7 @@ crossorigin="anonymous">
 <script src="./assets/js/jquery-ui.js"></script>
 <script type="text/javascript" src="./assets/js/slick/slick.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-lightbox/0.2.12/slick-lightbox.min.js" integrity="sha512-iSVaq9Huv1kxBDAOH7Il1rwIJD+uspMQC1r4Y73QquhbI2ia+PIXUoS5rBjWjYyD03S8t7gZmON+Dk6yPlWHXw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
 <script src="./assets/js/index.js" type="text/javascript"></script>
 </body>
 </html>
