--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <source src="./assets/images/video_compressed_a_lot.mp4" type="video/mp4">
     </video>
         <div id="site-link" class="site-link"><a href="https://www.site.tenaciousd.com" target="_blank" rel="noopener noreferrer">Proceed to site</a></div>
+        <div id="chat-link" class="chat-link" onclick="openChatModal();">Open Chat</div>
    
 
         <div class="door-div one active" id="door"></div>
@@ -63,6 +64,12 @@
     </div>
 
     
+    <div class="chat-modal" id="chat-modal">
+    <div class="chat-modal-content">
+        <div class="exit-chat-modal" id="exit-chat-modal" onclick="closeChatModal();">X</div>
+          <iframe src="https://deadsiSSmplechat.com/gtus9LzeK" width="100%" height="600px"></iframe>
+        </div>
+    </div>
 
     <div id='landing-modal'>
         <div class="landing-modal-content">
