--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div class="chat-modal" id="chat-modal">
     <div class="chat-modal-content">
         <div class="exit-chat-modal" id="exit-chat-modal" onclick="closeChatModal();">X</div>
-          <iframe src="https://deadsiSSmplechat.com/gtus9LzeK" width="100%" height="600px"></iframe>
+          <iframe src="https://deadsimplechat.com/gtus9LzeK" width="100%" height="600px"></iframe>
         </div>
     </div>
 
