--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <source src="./assets/images/video_compressed_a_lot.mp4" type="video/mp4">
     </video>
         <div id="site-link" class="site-link"><a href="https://www.site.tenaciousd.com" target="_blank" rel="noopener noreferrer">Proceed to site</a></div>
-        <div id="chat-link" class="chat-link" onclick="openChatModal();">Open Chat</div>
+        <!-- <div id="chat-link" class="chat-link" onclick="openChatModal();">Open Chat</div> -->
    
 
         <div class="door-div one active" id="door"></div>
@@ -52,7 +52,8 @@
         <div class="door-div ten active" id="door"></div>
         <div class="door-div twelve active" id="door"></div>
         <div class="door-div thirteen active" id="door"></div>
-        <div class="door-div fourteen active current-day" id="door"></div>
+        <div class="door-div fourteen active" id="door"></div>
+        <div class="door-div fifteen active current-day" onclick="openChatModal()"></div>
     </div>
 
     <div class="modal" id="modal">
@@ -67,7 +68,7 @@
     <div class="chat-modal" id="chat-modal">
     <div class="chat-modal-content">
         <div class="exit-chat-modal" id="exit-chat-modal" onclick="closeChatModal();">X</div>
-          <iframe src="https://deadsimplechat.com/gtus9LzeK" width="100%" height="600px"></iframe>
+          <iframe src="https://deadsimplechat.com/gtus9LzeK" width="100%" height="600px" style="border: none;"></iframe>
         </div>
     </div>
 
