--- a/assets/html/sixteen.html
+++ b/assets/html/sixteen.html
@@ -1,8 +1,12 @@
 <div>
     <p class="white-text">
-        Dio Day
+        Merch Drop #2!
     </p>
-    <iframe src="https://player.vimeo.com/video/596679778" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+    <iframe src="https://player.vimeo.com/video/606628671" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>    
+    <div class="merch-drop-buttons">
+        <a href="https://kf-merch.com/collections/tenaciousd" class="merch-button" target="_blank" rel="noopener noreferrer">US MERCH STORE</a>
+        <a href="https://shop.bingomerch.com/collections/tenacious-d" class="merch-button" target="_blank" rel="noopener noreferrer">EU MERCH STORE</a>
+    </div>
     <div class="modal-social-shares">
         <a href="https://twitter.com/intent/tweet?text=Day%2017%20complete!%20You%20have%20once%20again%20proved%20you%20are%20a%20worthy%20member%20of%20the%20D-ciples.%20😈🔥🤘🏻&url=https://tenaciousd.com" target="_blank" rel="noopener noreferrer">Twitter</a><a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Ftenaciousd.com%2F&amp;src=sdkpreparse" target="_blank" rel="noopener noreferrer">Facebook</a>
     </div>
