--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="utf-8">
     <meta name="twitter:title" content="TENACIOUS D - 20TH ANNIVERSARY CELEBRATION">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:description" content="Day 14 complete via https://tenaciousd.com. You have once again proved you are a worthy member of the D-ciples. 😈🔥🤘🏻">
+    <meta name="twitter:description" content="Day 17 complete via https://tenaciousd.com. You have once again proved you are a worthy member of the D-ciples. 😈🔥🤘🏻">
     <meta name="twitter:image" content="https://tenaciousd.com/assets/images/D.jpeg">
     <meta name="twitter:domain" content="https://tenaciousd.com">
 
     <meta property="og:url"                content="https://tenaciousd.com" />
     <meta property="og:type"               content="website" />
     <meta property="og:title"              content="TENACIOUS D - 20TH ANNIVERSARY CELEBRATION" />
-    <meta property="og:description"        content="Day 14 complete via https://tenaciousd.com. You have once again proved you are a worthy member of the D-ciples. 😈🔥🤘🏻" />
+    <meta property="og:description"        content="Day 17 complete via https://tenaciousd.com. You have once again proved you are a worthy member of the D-ciples. 😈🔥🤘🏻" />
     <meta property="og:image"              content="./assets/images/D.jpeg" />
     <title>TENACIOUS D</title>
 
@@ -37,8 +37,6 @@
         <source src="./assets/images/video_compressed_a_lot.mp4" type="video/mp4">
     </video>
         <div id="site-link" class="site-link"><a href="https://www.site.tenaciousd.com" target="_blank" rel="noopener noreferrer">Proceed to site</a></div>
-        <!-- <div id="chat-link" class="chat-link" onclick="openChatModal();">Open Chat</div> -->
-   
 
         <div class="door-div one active" id="door"></div>
         <div class="door-div two active" id="door"></div>
@@ -53,7 +51,10 @@
         <div class="door-div twelve active" id="door"></div>
         <div class="door-div thirteen active" id="door"></div>
         <div class="door-div fourteen active" id="door"></div>
-        <div class="door-div fifteen active current-day" onclick="openChatModal()"></div>
+        <div class="door-div fifteen active" id="door"></div>
+        <div class="door-div sixteen active" id="door"></div>
+        <div class="door-div seventeen active current-day" onclick="openChatModal()"></div>
+
     </div>
 
     <div class="modal" id="modal">
@@ -64,11 +65,13 @@
         </div>
     </div>
 
-    
     <div class="chat-modal" id="chat-modal">
     <div class="chat-modal-content">
         <div class="exit-chat-modal" id="exit-chat-modal" onclick="closeChatModal();">X</div>
-          <iframe src="https://deadsimplechat.com/gtus9LzeK" width="100%" height="600px" style="border: none;"></iframe>
+            <iframe src="https://deadsimplechat.com/gtus9LzeK" width="100%" height="600px" style="border: none;"></iframe>
+            <div class="modal-social-shares">
+                <a href="https://twitter.com/intent/tweet?text=Day%2017%20complete!%20You%20have%20once%20again%20proved%20you%20are%20a%20worthy%20member%20of%20the%20D-ciples.%20😈🔥🤘🏻&url=https://tenaciousd.com" target="_blank" rel="noopener noreferrer">Twitter</a><a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Ftenaciousd.com%2F&amp;src=sdkpreparse" target="_blank" rel="noopener noreferrer">Facebook</a>
+            </div>
         </div>
     </div>
 
